tests/fixtures/invalid/str_mod_float.py
# Cannot modulo Str and Float
x: float = "hello" % 1.0
